--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.0"
+version = "1.8-0.0.1"
 group= "garndesh.materdraco" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "materdraco"
 
@@ -55,7 +55,7 @@ processResources
     inputs.property "version", project.version
     inputs.property "mcversion", project.minecraft.version
 
-    // replace stuff in mcmod.info, nothing else
+    // replace stuff in mcmod.info nothing else
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
                 
